# setup-environment-briascoleonel

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  Makefile
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt  Makefile
lib/libdyn/include/: shared.h
lib/libsta/: CMakeLists.txt  Makefile
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
